--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5433/clinica
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 server.port=8080
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
